2005-08-05	Benedikt Meurer <benny@xfce.org>

	* exo/exo-object.h: Reserve two pointers for ExoObject.

2005-08-04	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Merge debug support from Thunar. Add check for
	  target platform, supports only i386 currently.
	* exo/exo-noop-generic.c, exo/exo-noop-i386.S, exo/exo-noop.h: Add
	  commonly used noops.
	* exo/exo.h: Include exo-object.h and exo-noop.h.
	* exo/exo-config.h.in: Add EXO_GNUC_MALLOC macro.
	* exo/exo-object.{c,h}, exo/exo-object-generic.c, exo/exo-object-i386.S:
	  Add lightweight object class which features thread-safe type
	  registration and atomic refcouting, but provides none of the more
	  advanced features of GObject. This can be used for lightweight, fast
	  objects, that don't require any of GObject's features other than
	  refcounting.
	* exo/Makefile.am: Add the new files.
	* tests/test-exo-noop.c, tests/test-exo-noop.c, tests/Makefile.am: Add
	  new tests for exo-noop and exo-object.

2005-07-19	Benedikt Meurer <benny@xfce.org>

	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
	  <daichik@users.sourceforge.net>.

2005-07-02	Benedikt Meurer <benny@xfce.org>

	* tests/Makefile.am: Don't assume that srcdir = builddir.

2005-07-02	Benedikt Meurer <benny@xfce.org>

	* exo-csource/Makefile.am, exo-csource/main.c: Import the exo-csource
	  utility, which can generate C code for arbitrary data, much like
	  gdk-pixbuf-csource, but not limited to images.
	* docs/reference/exo-csource.xml, docs/reference/Makefile.am,
	  docs/reference/exo-docs.sgml: Add documentation for the exo-csource
	  utility.
	* tests/: Add a simple test case for the exo-csource utility.
	* po/: Hook the new strings from exo-csource into the translation
	  database.
	* Makefile.am, configure.in.in: Link new stuff into the build framework.

2005-06-28	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, autogen.sh, Makefile.am: Merge build framework
	  changes from Thunar.